# generator

./: .gitignore  .travis.yml  Cargo.toml  Makefile  README.md  justfile
cargo_log_parser/: Cargo.toml
cargo_log_parser/src/lib/: mod.rs
cargo_log_parser/src/lib/tests/: mod.rs
ci/: before_deploy.sh  install.sh  script.sh
discovery_parser/: Cargo.toml
discovery_parser/examples/: filter_apis.rs
discovery_parser/src/: discovery.rs  lib.rs
discovery_parser/tests/: tests.rs
etc/: api-index-mapped.v1.json
field_selector/: Cargo.toml
field_selector/src/: lib.rs
field_selector/tests/: tests.rs
field_selector_derive/: Cargo.toml
field_selector_derive/src/: lib.rs
generator/: Cargo.toml
generator/examples/: compute.rs  drive.rs  oauth2.rs  print_schemas.rs
generator/gen_include/: README.md  iter.rs  multipart.rs  parsed_string.rs
generator/src/: cargo.rs  lib.rs  method_actions.rs  method_builder.rs  path_templates.rs  resource_builder.rs  rustfmt.rs
google_api_auth/: Cargo.toml
google_api_auth/src/: lib.rs  yup_oauth2.rs
google_api_bytes/: Cargo.toml
google_api_bytes/src/: lib.rs
google_cli_generator/: Cargo.toml
google_cli_generator/src/: all.rs  cargo.rs  cli.rs  lib.rs  util.rs
google_cli_generator/src/cli/: liquid_filters.rs  mod.rs  model.rs
google_cli_generator/templates/: 01_main.rs.liquid  02_main.rs.liquid
google_cli_generator/tests/: generate.rs  spec.json
google_cli_generator/tests/output/: .gitignore
google_cli_shared/: Cargo.toml  README.md
google_cli_shared/src/: lib.rs
google_field_selector/: Cargo.toml
google_field_selector/src/: lib.rs
google_field_selector/tests/: tests.rs
google_field_selector_derive/: Cargo.toml
google_field_selector_derive/src/: lib.rs
google_rest_api_generator/: Cargo.toml  build.rs
google_rest_api_generator/examples/: admin_directory.rs  any_api.rs  compute.rs  drive.rs  oauth2.rs
google_rest_api_generator/gen_include/: bytes.rs  error.rs  iter.rs  multipart.rs  parsed_string.rs  percent_encode_consts.rs  resumable_upload.rs
google_rest_api_generator/src/: cargo.rs  lib.rs  markdown.rs  method_actions.rs  method_builder.rs  package_doc.rs  path_templates.rs  resource_actions.rs  resource_builder.rs  rustfmt.rs
google_rest_api_generator/tests/: generate.rs
mcp/: Cargo.toml
mcp/src/: main.rs  shared.rs
mcp/src/cmds/: cargo_errors.rs  completions.rs  fetch_specs.rs  generate.rs  map_index.rs  mod.rs  substitute.rs  util.rs
mcp/src/options/: cargo_errors.rs  completions.rs  fetch_specs.rs  generate.rs  map_index.rs  mod.rs  process.rs  substitute.rs
mcp/src/parse/: completions.rs  mod.rs  process.rs  substitute.rs
mcp/src/shared/: mod.rs  tests.rs
mcp/src/snapshots/: parse_version__it_works_for_all_known_inputs.snap
shared/: Cargo.toml
shared/src/: lib.rs  rustfmt.rs
shared/tests/: shared.rs
shared/tests/fixtures/: known-versions
shared/tests/snapshots/: parse_version__it_works_for_all_known_inputs.snap
templates/: Makefile.liquid
templating/: Cargo.toml
templating/src/: lib.rs  liquid.rs
templating/src/substitute/: mod.rs  spec.rs  util.rs
templating/tests/: spec.rs
tests/mcp/: included-stateless-process.sh  included-stateless-substitute.sh  journey-tests.sh
tests/mcp/fixtures/substitute/: complex.tpl
tests/mcp/snapshots/process/: fail-invalid-output-format
tests/mcp/snapshots/process/substitute/: fail-source-is-destination-single-spec
tests/mcp/snapshots/substitute/: fail-data-stdin-json-data-validated-stdout  template-from-complex-template
uri_template_parser/: Cargo.toml
uri_template_parser/src/: lib.rs
uri_templates/: Cargo.toml
uri_templates/src/: lib.rs
