[profile.release]
opt-level = 3
# the flags below reduce binary size, but increase build time. Let's keep the latter low for now.
#lto = true
#codegen-units = 1
debug = false
rpath = false
debug-assertions = false

[workspace]

members = [
    "discovery_parser",
    "google_api_auth",
    "google_api_bytes",
    "google_field_selector",
    "google_field_selector_derive",
    "google_rest_api_generator",
    "google_cli_generator",
    "uri_template_parser",
    "cargo_log_parser",
    "shared",
    "templating",
    "mcp",
]
