[package]
name = "discovery_parser"
version = "0.1.0"
authors = ["Glenn Griffin <ggriffiniii@gmail.com>"]
edition = "2018"

[features]
# Don't allow unknown fields in serde parsing. Useful in development to ensure
# no features are being missed accidentally.
strict = []

[dependencies]
serde = { version = "1", features = ["derive"] }

[dev-dependencies]
reqwest = "0.9.18"
serde_json = "1"
futures = "0.1"
tokio = "0.1"
