[package]
name = "generator"
version = "0.1.0"
authors = ["Glenn Griffin <ggriffiniii@gmail.com>"]
edition = "2018"

[dependencies]
http = "0.1.17"
reqwest = "0.9.19"
discovery_parser = { path = "../discovery_parser" }
proc-macro2 = "0.4.30"
quote = "0.6.13"
Inflector = "0.11.4"
syn = "0.15.40"
serde_json = "1"
