[package]
name = "google_api_auth"
version = "0.1.0"
authors = ["Glenn Griffin <ggriffiniii@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = []
with-yup-oauth2 = ["yup-oauth2", "tokio"]

[dependencies]
yup-oauth2 = { git = "https://github.com/dermesser/yup-oauth2", optional = true } # Use released version once it includes 778e5af
tokio = { version = "0.1", optional = true }
