[package]
name = "google_cli_generator"
version = "0.1.0"
authors = ["Sebastian Thiel <byronimo@gmail.com>"]
edition = "2018"

[lib]
doctest = false

[dependencies]
google_rest_api_generator = { path = "../google_rest_api_generator" }
discovery_parser = { path = "../discovery_parser" }
shared = { path = "../shared" }
proc-macro2 = "1.0"
quote = "1.0"
syn = { version = "1.0", features = ["full", "extra-traits"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
log = "0.4.8"
crossbeam = "0.7.2"

[dev-dependencies]
toml_edit = "0.1.5"
tempfile = "3.1.0"
simple_logger = "1.3.0"

[build-dependencies]
chrono = "0.4.7"

