[package]
name = "google_field_selector_derive"
version = "0.1.0"
authors = ["Glenn Griffin <ggriffiniii@gmail.com>"]
edition = "2018"

[lib]
name = "google_field_selector_derive"
doctest = false
proc-macro = true

[dependencies]
serde_derive_internals = "0.25"
syn = "1.0.3"
quote = "1"
proc-macro2 = "1"
