[package]
name = "google_rest_api_generator"
version = "0.1.0"
authors = ["Glenn Griffin <ggriffiniii@gmail.com>"]
edition = "2018"

[dependencies]
http = "0.1.17"
reqwest = "0.9.19"
discovery_parser = { path = "../discovery_parser" }
proc-macro2 = "0.4.30"
quote = "0.6.13"
Inflector = "0.11.4"
syn = { version = "0.15.40", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
uri_template_parser = { path = "../uri_template_parser" }
shared = { path = "../shared" }
log = "0.4.8"
toml_edit = "0.1.5"
toolchain_find = "0.1.4"
pulldown-cmark-to-cmark = "1.2.2"
pulldown-cmark = "0.5.3"
percent-encoding = "2.1.0"

[dev-dependencies]
env_logger = "0.6.2"
structopt = "0.2.18"

