[package]
name = "google_rest_api_generator"
version = "0.1.0"
authors = ["Glenn Griffin <ggriffiniii@gmail.com>"]
edition = "2018"

[lib]
doctest = false

[dependencies]
discovery_parser = { path = "../discovery_parser" }
uri_template_parser = { path = "../uri_template_parser" }
shared = { path = "../shared" }
proc-macro2 = "1.0"
quote = "1.0"
Inflector = "0.11.4"
syn = { version = "1.0", features = ["full", "extra-traits"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
log = "0.4.8"
pulldown-cmark-to-cmark = "1.2.2"
pulldown-cmark = "0.5.3"
percent-encoding = "2.1.0"
reqwest = "0.9.19"

[dev-dependencies]
http = "0.1.17"
env_logger = "0.6.2"
structopt = "0.2.18"
tempfile = "3.1.0"
simple_logger = "1.3.0"

[build-dependencies]
chrono = "0.4.7"

