[package]
name = "mcp"
version = "0.1.0"
authors = ["Sebastian Thiel <sthiel@thoughtworks.com>"]
edition = "2018"
description = "A 'master control program' for handling generation of Google APIs"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sheesy-tools = "4.0.5"
clap = "2.33.0"
failure = "0.1.5"
itertools = "0.8.0"
atty = "0.2.13"
lazy_static = "1.3.0"
glob = "0.3.0"
failure-tools = "4.0.2"
