[package]
name = "mcp"
version = "0.1.0"
authors = ["Sebastian Thiel <sthiel@thoughtworks.com>"]
edition = "2018"
description = "A 'master control program' for handling generation of Google APIs"
exclude = ["src/shared/snapshots/"]
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sheesy-tools = "4.0.6"
clap = "2.33.0"
failure = "0.1.5"
itertools = "0.8.0"
atty = "0.2.13"
glob = "0.3.0"
failure-tools = "4.0.2"
structopt = { version = "0.2.18", features = [ "paw" ] }
discovery_parser = { path = "../discovery_parser" }
google_rest_api_generator = { path = "../google_rest_api_generator" }
shared = { path = "../shared" }
paw = "1.0.0"
serde_json = "1.0.40"
log = "0.4.8"
simple_logger = "1.3.0"
reqwest = "0.9.19"
rayon = "1.1.0"
serde = "1.0.99"

