[package]
authors = ["Sebastian Thiel <byronimo@gmail.com>"]
name = "templating"
version = "1.0.0"
edition = "2018"
publish = false

description = "Provide a nice interface to a templating engine"
license = "MIT"

[lib]
doctest = false

[dependencies]
failure = "0.1.1"
atty = "0.2.8"
serde_json = "1.0.11"
serde_yaml = "0.8.8"
yaml-rust = "0.4.0"
liquid = "0.19"
liquid-error = "0.19.0"
